<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".feature.login.LoginActivity">

    <data>
        <variable name="viewModel" type="com.alxminyaev.ratingnstustudent.feature.login.LoginViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">
        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/NSTU"
                    android:src="@drawable/nstu_logo"/>
            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center"
            />
        </FrameLayout>
        <EditText
                android:id="@+id/fld_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Input_login"
                android:inputType="text"
                android:layout_marginTop="15dp"
                android:autofillHints="username"
                android:text="@{viewModel.username}"
                tools:ignore="UnusedAttribute"/>
        <EditText
                android:id="@+id/fld_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/input_login"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:text="@{viewModel.password}"
                tools:ignore="UnusedAttribute"/>
        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/singIn"
                android:onClick="@{() -> viewModel.singIn()}"
                android:textColor="@color/white"
                android:background="@drawable/btn_round"
                android:layout_marginTop="10dp"/>
        <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:minHeight="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@{viewModel.message}"
                tools:text="Error"
                android:background="@drawable/lbl_round_error"
                android:visibility="invisible"/>


    </LinearLayout>
</layout>
