<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/txt_surname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        tools:text="Пупкин"/>
                <TextView
                        android:id="@+id/txt_firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/txt_surname"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Петр"/>
                <TextView
                        android:id="@+id/txt_middleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/txt_firstName"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Петров"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/txt_surname"
                        app:layout_constraintHorizontal_bias="0.5"
                        tools:text="АВТ-666"/>
                <View
                        android:id="@+id/divider"
                        android:layout_width="376dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_middleName"
                        app:layout_constraintStart_toStartOf="parent"/>
                <Button
                        android:id="@+id/btn_achievements"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/achievements"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/divider"
                        android:background="@drawable/btn_round"
                        android:textAlignment="center"/>
                <Button
                        android:id="@+id/btn_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/change_password"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="@drawable/btn_round"
                        android:textAlignment="center"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/btn_achievements"/>
                <Button
                        android:id="@+id/btn_sing_out"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/sing_out"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="@drawable/btn_round"
                        android:textAlignment="center"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/btn_change_password"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>